syntax = "proto3";

package com.recruitment.grpc.job;

message JobMatchRequest {
  string candidate_id = 1;
  repeated string skills = 2;
  string desired_role = 3;
}

message JobMatchResponse {
  string matched_job_id = 1;
  string title = 2;
  float match_score = 3;
}

service JobMatching {
  rpc MatchJob(JobMatchRequest) returns (JobMatchResponse);

  
  rpc StreamJobMatches(stream JobMatchRequest) returns (stream JobMatchResponse);
}
